crates/hdk_derive/tests/hdk_extern/hdk_extern_infallible_invalid_return.rs
use hdk::prelude::*;

#[hdk_extern(infallible)]
fn zome_fn() -> ExternResult<String> {
    Ok("should not be wrapped".into())
}

fn main() {}
